crates/compiler/cypress/tests/snapshots/test_parse__basic_field_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "rec.field\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* Ident=>LowerIdent@0 DotIdent=>NoSpaceDotLowerIdent@1 EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(Ident("rec"), ".field")

[=== formatted below ===]

