crates/compiler/cypress/tests/snapshots/test_parse__basic_tag_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "Whee\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr UpperIdent=>UpperIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UpperIdent("Whee")

[=== formatted below ===]
Whee

