crates/compiler/cypress/tests/snapshots/test_parse__basic_var_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "whee\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]

